--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #SERVER PORT
-server.port=7000
+server.port=9000
 server.servlet-path=/*
 
 cloud.aws.region.static=ap-northeast-2
@@ -9,12 +9,15 @@ cloud.aws.region.static=ap-northeast-2
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://review.cm03m1qy5nzi.ap-northeast-2.rds.amazonaws.com:3306/review
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://review-01.cxtixx3n8dlo.ap-northeast-2.rds.amazonaws.com:3306/innodb?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=admin
-spring.datasource.password=admin142536
+spring.datasource.password=12341234
 
 cloud.aws.stack.auto=false
+
+mybatis.mapper-locations=/mapper/*.xml
+
 
 #IMG SETTING
 server.compression.enabled=true 
