--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,11 @@
             <version>8.0.13</version>
         </dependency>
          -->
-
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
